fix: spacing

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ div hr.standard-hr {
 }
 
 .primary-section-body {
-  gap: 20px;
+  gap: 50px;
 }
 
 .form-container {
